[package]
name = "specialized-div-rem"
version = "0.3.0"
edition = "2018"
authors = ["Aaron Kutch <aaronkutch@att.net>"]

description = "specialized division algorithms for integer primitives"
repository = "https://github.com/AaronKutch/specialized-div-rem"
documentation = "https://docs.rs/specialized-div-rem"
readme = "README.md"
keywords = ["division", "int", "integer", "numerics", "math"]
categories = ["algorithms", "no-std"]
license = "MIT OR Apache-2.0"

[features]
no_std = []
asm = []

[dev-dependencies] # for benchmarks
rand = "0.7"
