[package]
name = "specialized-div-rem"
version = "0.3.0"
edition = "2018"
authors = ["Aaron Kutch <aaronkutch@att.net>"]

description = "specialized division algorithms for integer primitives"
repository = "https://github.com/AaronKutch/specialized-div-rem"
documentation = "https://docs.rs/specialized-div-rem"
readme = "README.md"
keywords = ["division", "int", "integer", "numerics", "math"]
categories = ["algorithms", "no-std"]
license = "MIT OR Apache-2.0"

[features]
default = ["asm", "std"]
# assembly is so critical to the performance of some algorithms that it should be the default
asm = []
# this is needed for benchmarks and the `println!` in tests
std = []

[dev-dependencies]
# for random numbers in benchmarks
rand = "0.7"

[profile.test]
# testing with `opt-level = 0` optimization is completely impractical
opt-level = 2
